--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <div class="mixlr_wrapper">
   <div class="mixlr_player">
-    <iframe src="https://mixlr.com/users/6920887/embed?autoplay=true&artwork=false" style="min-width: 500px" width="100%" height="180px" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+    <iframe src="https://mixlr.com/users/6920887/embed?autoplay=true&artwork=false" width="100%" height="180px" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
   </div>
 </div>
 </body>
