Turn offline mode on

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <body>
 <div class="mixlr_wrapper">
   <div class="mixlr_player">
-    <iframe src="https://mixlr.com/users/6920887/embed?autoplay=true&artwork=false" width="100%" height="180px" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
     <div class="last_fm">
-      <a target="_blank" href="https://www.last.fm/user/atmosoul/now">QUEL TITRE PASSE EN CE MOMENT ?</a>
+      <a target="_blank" href="https://www.last.fm/user/atmosoul/now">ATMO RADIO EST OFFLINE POUR LE MOMENT, REVENEZ PLUS TARD… ;-)</a>
     </div>
   </div>
 </div>
