Update with Daily Listen 2020-03-03

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="theme.css">
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:500&display=swap" rel="stylesheet"> 
-  </head>
-<body>
-<div class="mixlr_wrapper">
-  <div class="mixlr_player">
-    <div class="last_fm">
-      <a target="_blank" href="https://www.last.fm/user/atmosoul/now">ATMO RADIO EST OFFLINE POUR LE MOMENT, REVENEZ PLUS TARD… ;-)</a>
+    <link href="https://fonts.googleapis.com/css?family=Barlow:100,300,500,800&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+   </head>
+   <body>
+    <div class="content">
+      <div class="atmoradio">Atmo Radio</div>
+      <datetime class="date">2020.03.04</datetime>
+      <div class="artist">Linkwood & Greg Foat</div>
+      <div class="title">'Mysterious Richie'</div>
+      <div class="label">(Athens of The North)</div>
+      <div class="spotify-wrapper">
+        <iframe src="https://open.spotify.com/embed/track/2Qxc1DvFsHVrDFw5OH48dN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      </div>
     </div>
-  </div>
-</div>
-</body>
+   </body>
+
 </html>
