Update with Daily Suggestion 2020-03-04 (HTML)

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
    </head>
    <body>
     <div class="content">
-      <div class="atmoradio">Atmo Radio</div>
+      <div class="atmoradio">Atmo Radio <em>Daily Suggestion</em></div>
       <datetime class="date">2020.03.04</datetime>
       <div class="artist">Linkwood & Greg Foat</div>
       <div class="title">'Mysterious Richie'</div>
+      <div class="shadows">
+        <div class="artist-shadow">Linkwood & Greg Foat</div>
+        <div class="title-shadow">'Mysterious Richie'</div>
+        <!-- <datetime class="date-shadow">04.03.2020</datetime> -->
+      </div>
       <div class="label">(Athens of The North)</div>
       <div class="spotify-wrapper">
         <iframe src="https://open.spotify.com/embed/track/2Qxc1DvFsHVrDFw5OH48dN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
