--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <div class="content">
       <div class="atmoradio">Atmo Radio <em>Daily Suggestion</em></div>
       <datetime class="date">2020.03.04</datetime>
-      <div class="artist">Linkwood & Greg Foat</div>
-      <div class="title">'Mysterious Richie'</div>
+      <div class="artist">LMark E</div>
+      <div class="title">'Nova Blur'</div>
       <div class="shadows">
-        <div class="artist-shadow">Linkwood & Greg Foat</div>
-        <div class="title-shadow">'Mysterious Richie'</div>
+        <div class="artist-shadow">Mark E</div>
+        <div class="title-shadow">'Nova Blur'</div>
         <!-- <datetime class="date-shadow">04.03.2020</datetime> -->
       </div>
-      <div class="label">(Athens of The North)</div>
+      <div class="label">(Studio Barnhus)</div>
       <div class="spotify-wrapper">
         <iframe src="https://open.spotify.com/embed/track/2Qxc1DvFsHVrDFw5OH48dN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
