--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="content">
       <div class="atmoradio">Atmo Radio <em>Daily Suggestion</em></div>
       <datetime class="date">2020.03.04</datetime>
-      <div class="artist">LMark E</div>
+      <div class="artist">Mark E</div>
       <div class="title">'Nova Blur'</div>
       <div class="shadows">
         <div class="artist-shadow">Mark E</div>
