--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="shadows">
         <div class="artist-shadow">Mark E</div>
         <div class="title-shadow">'Nova Blur'</div>
-        <!-- <datetime class="date-shadow">04.03.2020</datetime> -->
+        <div class="label-shadow">Studio Barnhus</div>
       </div>
       <div class="label">(Studio Barnhus)</div>
       <div class="spotify-wrapper">
