Update L.O.-based style

--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Barlow:100,300,500,800&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet"> >
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet"> 
+    <link href="./style.css" rel="stylesheet">
    </head>
    <body>
+    <div class="track">
+      <div class="title">Nova Blur</div>
+      <div class="artist-label"><strong>Mark E</strong> Studio Barnhus</div>
+    </div>
     <div class="content">
-      <div class="atmoradio">Atmo Radio <em>Daily Suggestion</em></div>
-      <datetime class="date">2020.03.04</datetime>
-      <div class="artist">Mark E</div>
-      <div class="title">'Nova Blur'</div>
-      <div class="shadows">
-        <div class="artist-shadow">Mark E</div>
-        <div class="title-shadow">'Nova Blur'</div>
-        <div class="label-shadow">Studio Barnhus</div>
+      <div class="shadow shadow--top">
+        <p>3 mars 2020</p>
+        <p>Atmoradio</p>
       </div>
-      <div class="label">(Studio Barnhus)</div>
+      <div class="shadow shadow--bottom-right">
+        <div class="shadow--daily">Daily</em></div>
+        <div class="shadow--suggestion">Sugg</div>
+        <div class="shadow--suggestion">estion</div>
+      </div>
       <div class="spotify-wrapper">
-        <iframe src="https://open.spotify.com/embed/track/2Qxc1DvFsHVrDFw5OH48dN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/track/2Qxc1DvFsHVrDFw5OH48dN" width="436" height="514" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
     </div>
    </body>
