--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet"> >
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900&display=swap" rel="stylesheet"> 
-    <link href="./style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
    </head>
    <body>
     <div class="track">
