--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet"> >
+    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Syncopate:400,700&display=swap" rel="stylesheet"> 
     <link href="./style.css" rel="stylesheet">
    </head>
