--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <body>
     <div class="track">
       <div class="title">Nova Blur</div>
-      <div class="artist-label"><strong>Mark E</strong> Studio Barnhus</div>
+      <div class="artist-label"><strong>Mark E</strong>  (Studio Barnhus)</div>
     </div>
     <div class="content">
       <div class="shadow shadow--top">
