--- a/index.html
+++ b/index.html
@@ -1,27 +1,10 @@
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Syncopate:400,700&display=swap" rel="stylesheet"> 
-    <link href="./style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
    </head>
    <body>
-    <div class="track">
-      <div class="title">Mysterious Richie</div>
-      <div class="artist-label"><strong>Linkwood & Greg Foat</strong> (Athens Of The North)</div>
-    </div>
-    <div class="content">
-      <div class="shadow shadow--top">
-        <p>5 mars 2020</p>
-        <p>Atmoradio</p>
-      </div>
-      <div class="shadow shadow--bottom-right">
-        <div class="shadow--daily">Daily</em></div>
-        <div class="shadow--suggestion">Sugg</div>
-        <div class="shadow--suggestion">estion</div>
-      </div>
-      <div class="spotify-wrapper">
-        <iframe src="https://open.spotify.com/embed/track/7tv1RrInsf8oRjEiBPZ18n" width="436" height="514" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-      </div>
+    <div class="main">
+      <img src="atmoradio-logo.png" />
     </div>
    </body>
 
