--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <link rel="stylesheet" href="style.css">
    </head>
    <body>
-    <div class="main">
+    <div class="header">
       <img class="logo" src="atmoradio-logo.png" />
+      <a class="social" href="https://instagram.com/atmoradio"><img class="icon icon__social instagram" src="instagram.svg" /></a>
+    </div>
+    <div class="main">
       <div class="podcast-list__wrapper">
         <ul class="podcast-list">
           <li class="podcast-list__item">
             <a href="https://open.spotify.com/playlist/2SPHtaUelGXVChgpyWsyhn?si=1df1ca2bfce64b68">
               <div class="overlay-number overlay-number-01">01</div>
               <img src="Picks-and-Kicks-01-jul24.png" />
-              <div class="spotify-cta spotify-cta-01">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
+              <div class="spotify-cta">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
             </a>
           </li>
           <li class="podcast-list__item">
             <a href="https://open.spotify.com/playlist/6qyfUL4cCBZe4H7c75tgNJ?si=3d2abb5811a8403e">
               <div class="overlay-number overlay-number-02">02</div>
               <img src="Picks-and-Kicks-02-aug24.png" />
-              <div class="spotify-cta spotify-cta-02">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
+              <div class="spotify-cta">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
             </a>
           </li>
         </ul>
