Prepare for 3rd item and adjust gradient based on position

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div class="main">
       <div class="podcast-list__wrapper">
         <ul class="podcast-list">
+          <!-- <li class="podcast-list__item item-03">
+            <a href="https://open.spotify.com/playlist/2SPHtaUelGXVChgpyWsyhn?si=1df1ca2bfce64b68">
+              <div class="overlay-number overlay-number-03">03</div>
+              <img src="Picks-and-Kicks-03-sep24.png" />
+              <div class="spotify-cta">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
+            </a>
+          </li> -->
           <li class="podcast-list__item item-02">
             <a href="https://open.spotify.com/playlist/6qyfUL4cCBZe4H7c75tgNJ?si=3d2abb5811a8403e">
               <div class="overlay-number overlay-number-02">02</div>
@@ -28,7 +35,6 @@
               <div class="spotify-cta">Listen on Spotify<span class="spotify-cta-arrow">→</span></div>
             </a>
           </li>
-
         </ul>
       </div>
     </div>
